...
        switch self {
        case .playing:
            "Pause"
        case .loading:
            "Loading"
        case .stopped, .paused:
            "Play"
        }
    }

    var statusLabel: String {
        switch self {
        case .playing:
...
